<?xml version="1.0" encoding="utf-8"?>
<!--
  ~     Copyright 2018 Jonathan Merritt 11R00TT00R11@GMAIL.COM
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <Button
      android:id="@+id/open_string"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/open_string"
      app:layout_constraintBottom_toTopOf="@+id/open_bytes"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"

      app:layout_constraintVertical_chainStyle="packed"
      />

  <Button
      android:id="@+id/open_bytes"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/open_bytes"
      app:layout_constraintBottom_toTopOf="@+id/open_save"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/open_string"
      />

  <Button
      android:id="@+id/open_save"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/open_save"
      app:layout_constraintBottom_toTopOf="@+id/list_all"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/open_bytes"
      />

  <Button
      android:id="@+id/list_all"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/list_all"
      app:layout_constraintBottom_toTopOf="@+id/list_open"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/open_save"
      />

  <Button
      android:id="@+id/list_open"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/list_open"
      app:layout_constraintBottom_toTopOf="@+id/list_open_string"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/list_all"
      />

  <Button
      android:id="@+id/list_open_string"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/list_open_string"
      app:layout_constraintBottom_toTopOf="@+id/list_open_bytes"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/list_open"
      />

  <Button
      android:id="@+id/list_open_bytes"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/list_open_bytes"
      app:layout_constraintBottom_toTopOf="@+id/list_open_save"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/list_open_string"
      />

  <Button
      android:id="@+id/list_open_save"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/list_open_save"
      app:layout_constraintBottom_toTopOf="@+id/list_open_fd"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/list_open_bytes"
      />

  <Button
      android:id="@+id/list_open_fd"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/list_open_fd"
      app:layout_constraintBottom_toTopOf="@+id/list_open_non_asset_fd"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/list_open_save"
      />

  <Button
      android:id="@+id/list_open_non_asset_fd"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/list_open_non_asset_fd"
      app:layout_constraintBottom_toTopOf="@+id/list_open_xml_resource_parser"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/list_open_fd"
      />

  <Button
      android:id="@+id/list_open_xml_resource_parser"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_margin="@dimen/small_margin"
      android:text="@string/list_open_xml_resource_parser"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/list_open_non_asset_fd"
      />

</android.support.constraint.ConstraintLayout>